# donation-box-e3dc-plugin

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  example.env  pyproject.toml
.github/workflows/: build.yml  lint.yml
src/app/: main.py
src/app/controller/: auth.py  e3dc_controller.py
src/app/schema/: schema.py
src/app/service/: __init__.py  auth_service.py  e3dc_service.py
src/app/utils/: settings.py
